argocd/argo-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
    spec:
      containers:
      -  name: argocd-server
      command:
        - argocd-server
        - --insecure
        # - --rootpath
        # - /argocd
