argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    app: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: argocd.localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name:  argocd-server
          port:
            name: http
